Fix spacing in `.table-cell-actions`

--- a/src/css/elements/table.scss
+++ b/src/css/elements/table.scss
@@ -46,13 +46,7 @@
   padding-bottom: 0.5px;
   padding-top: 0;
 
-  .button {
-    // floating to eliminate spaces in between buttons
-    float: left;
-
-    // clearfix not necessary here since table cell has appropriate height anyway
-    //@include clearfix;
-  }
+  // applying float to .buttons doesn't work here as it causes line breaks with multiple buttons on smaller screens
 
   .button:not(:last-child) {
     margin-right: $spacer-2;
